--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,19 @@
 [package]
-name = "tableux"
+name = "tableaux"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+parse = ["winnow"]
+default = ["parse"]
+
 [dependencies]
-anyhow = "1.0.98"
-bumpalo = "3.17.0"
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+anstyle = "1.0.10"
+winnow = { version = "0.7.10", optional = true }
+
+[workspace]
+resolver = "3"
+members = [
+  ".",
+  "playground",
+]
