--- a/playground/package.json
+++ b/playground/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/d3": "^7.4.3",
+		"@types/node": "^24.2.1",
 		"@vitest/browser": "^3.2.3",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -33,11 +34,13 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"smol-toml": "^1.4.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
+		"valibot": "^1.1.0",
 		"vite": "^7.0.4",
 		"vite-plugin-top-level-await": "^1.6.0",
 		"vite-plugin-wasm": "^3.5.0",
@@ -46,6 +49,7 @@
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
+			"@swc/core",
 			"esbuild"
 		]
 	},
