fix: typo in examples
also don't use nix store path in flake, to be able
to update the examples

--- a/examples-graham-priest.toml
+++ b/examples-graham-priest.toml
@@ -139,7 +139,7 @@ holds = false
 
 [3.3.3]
 conclusion = "[]p > p"
-kind = { relfexive = true }
+kind = { reflexive = true }
 
 [3.3.4]
 conclusion = "p > []<>p"
