--- a/playground/package.json
+++ b/playground/package.json
@@ -38,6 +38,7 @@
 		"smol-toml": "^1.4.2",
 		"svelte": "^5.38.1",
 		"svelte-check": "^4.3.1",
+		"sveltekit-search-params": "4.0.0-next.0",
 		"tailwindcss": "^4.1.12",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.39.1",
